force-app/main/default/objects/Schedule__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <description>Allows users to enter a text description of an exception to the schedule that is being created.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter a text description of an exception to the schedule that is being created</inlineHelpText>
    <label>Exception</label>
    <type>TextArea</type>
</CustomField>