force-app/main/default/objects/Schedule__c/fields/HealthcareFacility_del__c.field-meta.xml
<CustomField>
    <fullName>HealthcareFacility_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Healthcare facility for surgery days</description>
    <inlineHelpText>Select the healthcare facility for surgery days</inlineHelpText>
    <label>Healthcare Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Surgeon Schedules</relationshipLabel>
    <relationshipName>R00N80000002UoysEAC</relationshipName>
    <type>Lookup</type>
</CustomField>