force-app/main/default/objects/Schedule__c/fields/Surgeon__c.field-meta.xml
<CustomField>
    <fullName>Surgeon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surgeon</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>Schedule_Account</relationshipName>
    <type>Lookup</type>
</CustomField>