force-app/main/default/objects/Schedule__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
                <default>true</default>
                <label>AM</label>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>All  Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>